tab__content-visibility

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1406,7 +1406,7 @@
                                                       </div>
                                                       
                                                     </div>
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <ul class="tq6hspd h1aqtv1m dir dir-ltr">
                                                         <li class="tpa8qb9 dir dir-ltr">
                                                           <div class="c8jnr5n dir dir-ltr"><span class="icrczfu dir dir-ltr"><svg viewBox="0 0 32 32"
@@ -5533,7 +5533,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         <div class="section-container">
 <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
   <div data-plugin-in-point-id="HERO_EXPERIENCES" data-section-id="HERO_EXPERIENCES" style="padding-top: 32px;">
-    <div class="_88xxct">
+    <div class="tab__content-visibility">
       <div class="cipszq0 dir dir-ltr">
         <div class="_14p0csax">
           <div style="display: grid; grid-area: 1 / 1 / auto / auto;">
@@ -6294,7 +6294,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         </div>
                                                       </div>
                                                     </div>
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <ul class="tq6hspd h1aqtv1m dir dir-ltr">
                                                         <li class="tpa8qb9 dir dir-ltr">
                                                           <div class="c8jnr5n dir dir-ltr"><span class="icrczfu dir dir-ltr"><svg viewBox="0 0 32 32"
@@ -7059,7 +7059,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           <div class="_1x0diny1">
                                                             <div class="_16fq9mb">or</div>
                                                           </div>
-                                                          <div class="_88xxct">
+                                                          <div class="tab__content-visibility">
                                                             <div class="_88sa87">
                                                               <div class="_jwti9r">
                                                                 <form action="/oauth_connect?from=facebook_login&amp;service=facebook" method="POST"
@@ -10961,7 +10961,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
               <div class="contents"
                 style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
                 <div class="_17itzz4">
-                  <div class="_88xxct">
+                  <div class="tab__content-visibility">
                     <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width:1120px;">
                         <div data-plugin-in-point-id="BOOK_IT_MODAL" data-section-id="BOOK_IT_MODAL">
@@ -10987,7 +10987,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                     <div style="display: contents; --dls19-brand-color:var(--gray-900);">
                                       <section>
                                         <div class="text-dark">
-                                          <div class="_88xxct">
+                                          <div class="tab__content-visibility">
                                             <div class="_267gg">
                                               <div>
                                                 <div class="_10qs2gf">
@@ -11218,7 +11218,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             <div class="contents"
               style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
               <div class="_17itzz4">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="flex-before-after dir dir-ltr" style="">
                     <div style="--gp-section-max-width:1120px;">
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
@@ -11229,7 +11229,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             </div>
                             <div class="_1rxxw62">
                               <div class="_1qkaeb4">
-                                <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                                <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                                       class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                           role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -11240,7 +11240,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_v7xhdzy">
-                              <div class="_88xxct"></div>
+                              <div class="tab__content-visibility"></div>
                             </div>
                           </div>
                           <div data-testid="photo-viewer-slideshow-desktop" class="_1kpe7lgb">
@@ -11376,7 +11376,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             <div class="contents"
               style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
               <div class="_17itzz4">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="flex-before-after dir dir-ltr" style="">
                     <div style="--gp-section-max-width:1120px;">
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
@@ -11387,7 +11387,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             </div>
                             <div class="_1rxxw62">
                               <div class="_1qkaeb4">
-                                <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                                <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                                       class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                           role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -11398,7 +11398,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_v7xhdzy">
-                              <div class="_88xxct"></div>
+                              <div class="tab__content-visibility"></div>
                             </div>
                           </div>
                           <div data-testid="photo-viewer-slideshow-desktop" class="_1kpe7lgb">
@@ -11492,7 +11492,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             <div class="contents"
               style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
               <div class="_17itzz4">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="flex-before-after dir dir-ltr" style="">
                     <div style="--gp-section-max-width:1120px;">
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
@@ -11503,7 +11503,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             </div>
                             <div class="_1rxxw62">
                               <div class="_1qkaeb4">
-                                <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                                <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                                       class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                           role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -11514,7 +11514,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_v7xhdzy">
-                              <div class="_88xxct"></div>
+                              <div class="tab__content-visibility"></div>
                             </div>
                           </div>
                           <div data-testid="photo-viewer-slideshow-desktop" class="_1kpe7lgb">
@@ -11609,7 +11609,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             <div class="contents"
               style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
               <div class="_17itzz4">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="flex-before-after dir dir-ltr" style="">
                     <div style="--gp-section-max-width:1120px;">
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
@@ -11620,7 +11620,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             </div>
                             <div class="_1rxxw62">
                               <div class="_1qkaeb4">
-                                <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                                <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                                       class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                           role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -11631,7 +11631,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_v7xhdzy">
-                              <div class="_88xxct"></div>
+                              <div class="tab__content-visibility"></div>
                             </div>
                           </div>
                           <div data-testid="photo-viewer-slideshow-desktop" class="_1kpe7lgb">
@@ -11726,7 +11726,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             <div class="contents"
               style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
               <div class="_17itzz4">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="flex-before-after dir dir-ltr" style="">
                     <div style="--gp-section-max-width:1120px;">
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
@@ -11737,7 +11737,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             </div>
                             <div class="_1rxxw62">
                               <div class="_1qkaeb4">
-                                <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                                <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                                       class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                           role="presentation" aria-hidden="true" focusable="false"
                                           style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -11748,7 +11748,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_v7xhdzy">
-                              <div class="_88xxct"></div>
+                              <div class="tab__content-visibility"></div>
                             </div>
                           </div>
                           <div data-testid="photo-viewer-slideshow-desktop" class="_1kpe7lgb">
