--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -7133,7 +7133,7 @@
                                             <div data-plugin-in-point-id="UNSTRUCTURED_DESCRIPTION_LUXE"
                                               data-section-id="UNSTRUCTURED_DESCRIPTION_LUXE"
                                               style="padding-top: 32px; padding-bottom: 32px;">
-                                              <div class="_88xxct">
+                                              <div class="tab__content-visibility">
                                                 <div class="_eeq7h0">This Baroque masterpiece is famed for its gardens,
                                                   which Edith Wharton praised. A
                                                   cypress-lined allée leads to a distant hermitage, laying the scene for
@@ -12593,7 +12593,7 @@
                                         <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="HIGHLIGHTS_LUXE" data-section-id="HIGHLIGHTS_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
-                                          <div class="_88xxct">
+                                          <div class="tab__content-visibility">
                                             <div class="h1e0znt6 dir dir-ltr">
                                               <div style="--spacingBottom: 1;" class="products-container__header-text-pb dir dir-ltr">
                                                 <div class="t5p7tdn dir dir-ltr">
@@ -19731,7 +19731,7 @@
           <div class="contents">
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1"
               style="position: relative;">
-              <div class="_88xxct">
+              <div class="tab__content-visibility">
                 <div class="flex-before-after dir dir-ltr">
                   <div style="--gp-section-max-width:1120px;">
                     <div data-plugin-in-point-id="PHOTO_TOUR_SCROLLABLE_MODAL"
@@ -19755,7 +19755,7 @@
                                           </g>
                                         </svg></span></button></div>
                                   <div>
-                                    <div class="_88xxct">
+                                    <div class="tab__content-visibility">
                                       <div class="_1jdtwz4">
                                         <div class="_c2acbp"><button type="button" class="btn-link-small">
                                             <div class="flex-items-center"><span class="mr-2"><svg
@@ -19804,7 +19804,7 @@
                                                     </section>
                                                   </div>
                                                 </div>
-                                                <div class="_88xxct">
+                                                <div class="tab__content-visibility">
                                                   <div class="_1i6g032">
                                                     <div class="_lk9qdq"><button data-scroll="#scrollTo_560470338"
                                                         aria-label="Scroll to Exterior" type="button"
@@ -24025,7 +24025,7 @@
                       photo 1 of 98</span><span aria-hidden="true">1 / 98</span></div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                      <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                             class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                 role="presentation" aria-hidden="true" focusable="false"
                                 style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -24036,7 +24036,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp"><button aria-label="Share" type="button" class="_4ijurz"><span
                               class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
@@ -24140,7 +24140,7 @@
                       photo 2 of 98</span><span aria-hidden="true">2 / 98</span></div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                      <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                             class="btn-content-icontext"><span class="_escvzw"><svg viewBox="0 0 12 12"
                                 role="presentation" aria-hidden="true" focusable="false"
                                 style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -24151,7 +24151,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp"><button aria-label="Share" type="button" class="_4ijurz"><span
                               class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
