--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -6357,7 +6357,7 @@
                                                 <div data-plugin-in-point-id="DESCRIPTION_DEFAULT"
                                                   data-section-id="DESCRIPTION_DEFAULT"
                                                   style="padding-top: 32px; padding-bottom: 48px;">
-                                                  <div class="_88xxct"><span>
+                                                  <div class="tab__content-visibility"><span>
                                                       <div class="_1ojpw5l">
                                                         <div class="_1d784e5"><span class="ll4r2nl dir dir-ltr">Soak up
                                                             the
@@ -16833,7 +16833,7 @@
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
           <div class="contents">
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
-              <div class="_88xxct">
+              <div class="tab__content-visibility">
                 <div style="--gp-section-max-width:1120px;">
                   <div data-plugin-in-point-id="PHOTO_TOUR_SCROLLABLE_MODAL"
                     data-section-id="PHOTO_TOUR_SCROLLABLE_MODAL">
@@ -16856,7 +16856,7 @@
                                         </g>
                                       </svg></span></button></div>
                                 <div>
-                                  <div class="_88xxct">
+                                  <div class="tab__content-visibility">
                                     <div class="_1jdtwz4">
                                       <div class="_c2acbp"><button type="button" class="btn-link-small">
                                           <div class="flex-items-center"><span class="mr-2"><svg viewBox="0 0 32 32"
@@ -16903,7 +16903,7 @@
                                                   </section>
                                                 </div>
                                               </div>
-                                              <div class="_88xxct">
+                                              <div class="tab__content-visibility">
                                                 <div class="_1i6g032">
                                                   <div class="_lk9qdq"><button data-scroll="#scrollTo_627033186"
                                                       aria-label="Scroll to Living room" type="button"
@@ -19415,7 +19415,7 @@
                       photo 1 of 56</span><span aria-hidden="true">1 / 56</span></div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                      <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                             class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false"
                                 style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -19426,7 +19426,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp"><button aria-label="Share" type="button" class="_4ijurz"><span
                               class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
@@ -19530,7 +19530,7 @@
                       photo 5 of 56</span><span aria-hidden="true">5 / 56</span></div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct"><button data-button="close" type="button" class="_1f4biqmy"><span
+                      <div class="tab__content-visibility"><button data-button="close" type="button" class="_1f4biqmy"><span
                             class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false"
                                 style="height: 12px; width: 12px; display: block; fill: currentcolor;">
@@ -19541,7 +19541,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp"><button aria-label="Share" type="button" class="_4ijurz"><span
                               class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
