--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -21369,7 +21369,7 @@
           <div class="contents">
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1"
               style="position: relative">
-              <div class="_88xxct">
+              <div class="tab__content-visibility">
                 <div class="flex-before-after dir dir-ltr" style="">
                   <div style="--gp-section-max-width: 1120px">
                     <div data-plugin-in-point-id="PHOTO_TOUR_SCROLLABLE_MODAL"
@@ -21402,7 +21402,7 @@
                                     </button>
                                   </div>
                                   <div>
-                                    <div class="_88xxct">
+                                    <div class="tab__content-visibility">
                                       <div class="_1jdtwz4">
                                         <div class="_c2acbp">
                                           <button type="button" class="btn-link-small" data-modal="#share-modal">
@@ -23847,7 +23847,7 @@
                   </div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <button data-button="close" type="button" class="_1f4biqmy">
                           <span class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false" style="
@@ -23865,7 +23865,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp">
                           <button aria-label="Share" type="button" class="_4ijurz" data-modal="#share-modal">
@@ -24029,7 +24029,7 @@
                   </div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <button data-button="close" type="button" class="_1f4biqmy">
                           <span class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false" style="
@@ -24047,7 +24047,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp">
                           <button aria-label="Share" type="button" class="_4ijurz" data-modal="#share-modal">
@@ -24207,7 +24207,7 @@
                   </div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <button data-button="close" type="button" class="_1f4biqmy">
                           <span class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false" style="
@@ -24225,7 +24225,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp">
                           <button aria-label="Share" type="button" class="_4ijurz" data-modal="#share-modal">
@@ -24385,7 +24385,7 @@
                   </div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <button data-button="close" type="button" class="_1f4biqmy">
                           <span class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false" style="
@@ -24403,7 +24403,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp">
                           <button aria-label="Share" type="button" class="_4ijurz" data-modal="#share-modal">
@@ -24563,7 +24563,7 @@
                   </div>
                   <div class="_1rxxw62">
                     <div class="_1qkaeb4">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <button data-button="close" type="button" class="_1f4biqmy">
                           <span class="_14d5b3i"><span class="_escvzw"><svg viewBox="0 0 12 12" role="presentation"
                                 aria-hidden="true" focusable="false" style="
@@ -24581,7 +24581,7 @@
                     </div>
                   </div>
                   <div class="_v7xhdzy">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <div class="_1jdtwz4">
                         <div class="_c2acbp">
                           <button aria-label="Share" type="button" class="_4ijurz" data-modal="#share-modal">
@@ -25908,7 +25908,7 @@
               </div>
               <div class="_1lplc7"></div>
               <div class="m12aegvk dir dir-ltr">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div style="--gp-section-max-width: 1120px">
                     <div data-plugin-in-point-id="AIRCOVER_LEARN_MORE_MODAL"
                       data-section-id="AIRCOVER_LEARN_MORE_MODAL">
@@ -26048,7 +26048,7 @@
                             display: contents;
                             --dls19-brand-color: var(--gray-900);
                           ">
-                        <div class="_88xxct">
+                        <div class="tab__content-visibility">
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div data-plugin-in-point-id="DESCRIPTION_MODAL" data-section-id="DESCRIPTION_MODAL"
@@ -27514,7 +27514,7 @@
                 <div class="_rrmdgl"></div>
               </header>
               <div class="m12aegvk dir dir-ltr">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="flex-before-after dir dir-ltr">
                     <div style="--gp-section-max-width:1120px;">
                       <div data-plugin-in-point-id="WHAT_COUNTS_AS_A_PET_MODAL"
