--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6856,7 +6856,7 @@
                           </div>
                         </section>
                       </div>
-                      <div class="_88xxct"></div>
+                      <div class="tab__content-visibility"></div>
                     </div>
                   </div>
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -7053,7 +7053,7 @@
                               href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="text-link">Learn more</a></div>
                         </section>
                       </div>
-                      <div class="_88xxct"></div>
+                      <div class="tab__content-visibility"></div>
                     </div>
                   </div>
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
