--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3800,7 +3800,7 @@
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <div class="_vrk71ar">
-             <div class="_88xxct">
+             <div class="tab__content-visibility">
               <main id="site-content">
                <div style="--gp-section-max-width: 1120px;">
                 <div data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_660" data-section-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_660">
@@ -3869,7 +3869,7 @@
             style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
            >
             <div class="_vrk71ar">
-             <div class="_88xxct">
+             <div class="tab__content-visibility">
               <main id="site-content">
                <div style="--gp-section-max-width: 1120px;">
                 <div data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_662" data-section-id="EXPERIENCES_HOST_INSIGHTS_ISSUE_MODAL_662">
