--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4510,7 +4510,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="mt-2 hidden" id="credit-card-form">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div class="mt-4">
                                                         <div class="_clw8y6">
                                                           <iframe
@@ -6153,7 +6153,7 @@
                                                   </form>
                                                   <div class="_1x0diny1"><div class="_16fq9mb">or</div></div>
 
-<div class="_88xxct">
+<div class="tab__content-visibility">
   <div class="_88sa87">
     <div class="_1wifrqag">
       <form
