resolution-body__wrapper

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1375,7 +1375,7 @@
                                             <div data-plugin-in-point-id="HOST_PROFILE_DEFAULT" data-section-id="HOST_PROFILE_DEFAULT"
                                               style="padding-top: 48px; padding-bottom: 48px;">
                                               <div class="modal__items">
-                                                <div class="_5702fc7">
+                                                <div class="resolution-body__wrapper">
                                                   <section>
                                                     <div class="c6y5den dir dir-ltr">
                                                       <div class="tehcqxo dir dir-ltr">
