confirm-pay__price-wrapper

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6439,7 +6439,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_aryd7a">From ₱1,460</span><span
                                                               class="_1khgwh5">/ person</span></h2>
                                                           <div><span class="c1fa4tqf dir dir-ltr">
-                                                              <div class="_10d7v0r"><button type="button" class="_5d4yvqe">Show all prices</button></div>
+                                                              <div class="confirm-pay__price-wrapper"><button type="button" class="_5d4yvqe">Show all prices</button></div>
                                                             </span></div>
                                                           <div class="_15r1q8a">
 
