--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6444,7 +6444,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           <div class="_15r1q8a">
 
                                                   <div>
-                                                    <div class="_bp34sw">
+                                                    <div class="main-content__details-wrapper">
                                                       <div class="_1x0jb4k">
                                                         <div class="_u92pyy">
                                                           <div class="flex-1" data-testid="experiences-change-dates">
@@ -11061,7 +11061,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <!-- End of Show more date -->
 
                                                       <div>
-                                                        <div class="_bp34sw">
+                                                        <div class="main-content__details-wrapper">
                                                           <div class="_1x0jb4k">
                                                             <div class="_u92pyy">
                                                               <div class="flex-1" data-testid="experiences-change-dates"><button aria-expanded="false" type="button"
